deploiement/Eno-WS/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eno-ws
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: eno-ws
