deploiement/Eno-WS/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eno-ws
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - eno-ws.dev.insee.io
  rules:
    - host: eno-ws.dev.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eno-ws
                port:
                  number: 8080
